--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <header>
 
+        <h1>Module 1 - Assignment 1</h1>
 
     </header>
 
@@ -24,7 +25,7 @@
 
     <footer>
 
-        
+
     </footer>
 </body>
 </html>
