--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
     <nav>
 
+            <ul>
+                <li>list 1</li>
+                <li>list 2</li>
+                <li>list 3</li>
+                <li>list 4</li>
+                <li>list 5</li>
+            </ul>
 
     </nav>
     
@@ -18,6 +25,7 @@
 
     </header>
 
+    
     <main>
 
 
