--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>m1-hw1-felder-carson</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <nav>
 
-            <ul>
+            <ul class="nav">
                 <li>list 1</li>
                 <li>list 2</li>
                 <li>list 3</li>
