--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         <h2>GitHub Practice</h2>
         <p>This is in my master branch</p>
+        <p>this is my text branch</p>
 
     </main>
 
